--- a/ExorLive.Client.WebWrapper/Properties/Settings.settings
+++ b/ExorLive.Client.WebWrapper/Properties/Settings.settings
@@ -11,9 +11,6 @@
     <Setting Name="DistributorName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">ExorLive</Value>
     </Setting>
-    <Setting Name="CheckForUpdates" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
-    </Setting>
     <Setting Name="Debug" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
@@ -32,20 +29,26 @@
     <Setting Name="Maximized" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="SignonWithWindowsUser" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">False</Value>
-    </Setting>
-    <Setting Name="AppUrl" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">https://exorlive.com/app/</Value>
-    </Setting>
     <Setting Name="ProtocolProvider" Type="System.String" Scope="Application">
       <Value Profile="(Default)">ExorLive.Desktop.Arguments.Component, ExorLive.Desktop</Value>
     </Setting>
-    <Setting Name="RememberLoggedInUser" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">False</Value>
-    </Setting>
     <Setting Name="UpdatePath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="Log" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="SignonWithWindowsUser" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="AppUrl" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">http://test.exorlive.com/app/</Value>
+    </Setting>
+    <Setting Name="RememberLoggedInUser" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="CheckForUpdates" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
