--- a/ExorLive.Client.WebWrapper/App.Debug.config
+++ b/ExorLive.Client.WebWrapper/App.Debug.config
@@ -1,5 +1,30 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<!-- For more information on using transformations 
-     see the web.config examples at http://go.microsoft.com/fwlink/?LinkId=214134. -->
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
+	<applicationSettings>
+		<ExorLive.Properties.Settings>
+			<setting name="Debug" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">True</value>
+			</setting>
+			<setting name="Log" serializeAs="String">
+				<value>True</value>
+			</setting>
+			<setting name="AppUrl" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">http://localhost:50000/app/</value>
+			</setting>
+			<setting name="ProtocolProvider" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">ExorLive.Desktop.Arguments.Component, ExorLive.Desktop</value>
+			</setting>
+			<setting name="RememberLoggedInUser" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">True</value>
+			</setting>
+			<setting name="SignonWithWindowsUser" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">False</value>
+			</setting>
+			<setting name="AdfsUrl" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">http://localhost:57874/?name=localhost</value>
+			</setting>
+		</ExorLive.Properties.Settings>
+	</applicationSettings>
+
 </configuration>
+
