--- a/ExorLive.Client.WebWrapper/App.Procapita.config
+++ b/ExorLive.Client.WebWrapper/App.Procapita.config
@@ -12,6 +12,12 @@
 	</userSettings>
 	<applicationSettings>
 		<ExorLive.Properties.Settings>
+			<setting name="AppUrl" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">https://exorlive.com/app/</value>
+			</setting>
+			<setting name="Debug" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">False</value>
+			</setting>
 			<setting name="ProtocolProvider" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">ExorLive.Desktop.Procapita.Component, ExorLive.Desktop</value>
 			</setting>
