--- a/ExorLive.Client.WebWrapper/App.VGR.config
+++ b/ExorLive.Client.WebWrapper/App.VGR.config
@@ -3,7 +3,7 @@
 	<userSettings>
 		<ExorLive.Properties.Settings>
 			<setting name="CheckForUpdates" xdt:Locator="Match(name)">
-				<value xdt:Transform="Replace">True</value>
+				<value xdt:Transform="Replace">False</value>
 			</setting>
 			<setting name="UpdatePath" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">vgr</value>
@@ -13,16 +13,19 @@
 	<applicationSettings>
 		<ExorLive.Properties.Settings>
 			<setting name="AppUrl" xdt:Locator="Match(name)">
-				<value xdt:Transform="Replace">https://adfs.exorlive.com/?name=vgr</value>
+				<value xdt:Transform="Replace">https://exorlive.com/app/</value>
 			</setting>
 			<setting name="ProtocolProvider" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">ExorLive.Desktop.Arguments.Component, ExorLive.Desktop</value>
 			</setting>
 			<setting name="RememberLoggedInUser" xdt:Locator="Match(name)">
-				<value xdt:Transform="Replace">False</value>
+				<value xdt:Transform="Replace">True</value>
 			</setting>
 			<setting name="SignonWithWindowsUser" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">False</value>
+			</setting>
+			<setting name="AdfsUrl" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">https://adfs.exorlive.com/?name=vgr</value>
 			</setting>
 		</ExorLive.Properties.Settings>
 	</applicationSettings>
