--- a/ExorLive.Client.WebWrapper/App.Test1.config
+++ b/ExorLive.Client.WebWrapper/App.Test1.config
@@ -1,19 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-	<userSettings>
-		<ExorLive.Properties.Settings>
-			<setting name="CheckForUpdates" xdt:Locator="Match(name)">
-				<value xdt:Transform="Replace">True</value>
-			</setting>
-		</ExorLive.Properties.Settings>
-	</userSettings>
 	<applicationSettings>
 		<ExorLive.Properties.Settings>
 			<setting name="AppUrl" xdt:Locator="Match(name)">
-				<value xdt:Transform="Replace">https://exorlive.com/app/</value>
+				<value xdt:Transform="Replace">http://test.exorlive.com/app/</value>
 			</setting>
 			<setting name="Debug" xdt:Locator="Match(name)">
-				<value xdt:Transform="Replace">False</value>
+				<value xdt:Transform="Replace">True</value>
 			</setting>
 		</ExorLive.Properties.Settings>
 	</applicationSettings>
