--- a/ExorLive.Client.WebWrapper/Properties/Settings.settings
+++ b/ExorLive.Client.WebWrapper/Properties/Settings.settings
@@ -41,20 +41,20 @@
     <Setting Name="SignonWithWindowsUser" Type="System.String" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="AppUrl" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">http://test.exorlive.com/app/</Value>
-    </Setting>
     <Setting Name="RememberLoggedInUser" Type="System.String" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="CheckForUpdates" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="Log" Type="System.String" Scope="Application">
+    <Setting Name="Log1" Type="System.String" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="AdfsUrl" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="AppUrl" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">https://exorlive.com/app/</Value>
     </Setting>
   </Settings>
 </SettingsFile>
