--- a/Webpage/Webpage.csproj
+++ b/Webpage/Webpage.csproj
@@ -148,7 +148,21 @@
     <PreBuildEvent>
     </PreBuildEvent>
   </PropertyGroup>
-  <Target Name="AfterBuild">
+  <Target Name="BuildWebwrapper" BeforeTargets="Build">
+    <!-- <MSBuild Projects="$(SolutionDir)ExorLive.Client.WebWrapper.sln" Properties="Configuration=Release" Targets="Build" /> -->
+    <MSBuild Projects="$(SolutionDir)ExorLive.Desktop\ExorLive.Desktop.vbproj" Properties="Configuration=Release;Platform=Any CPU;OutputPath=bin\Release" Targets="Build" />
+    <MSBuild Projects="$(SolutionDir)ExorLive.Client.WebWrapper\ExorLive.Client.WebWrapper.csproj" Properties="Configuration=Release;Platform=Any CPU;OutputPath=bin\Release" Targets="Build" />
+    <MSBuild Projects="$(SolutionDir)SetupProject\SetupProject.wixproj" Properties="Configuration=Release;Platform=x86;OutputPath=bin\Release" Targets="Build" />
+
+    <MSBuild Projects="$(SolutionDir)ExorLive.Desktop\ExorLive.Desktop.vbproj" Properties="Configuration=VGR;Platform=Any CPU;OutputPath=bin\VGR" Targets="Build" />
+    <MSBuild Projects="$(SolutionDir)ExorLive.Client.WebWrapper\ExorLive.Client.WebWrapper.csproj" Properties="Configuration=VGR;Platform=Any CPU;OutputPath=bin\VGR" Targets="Build" />
+    <MSBuild Projects="$(SolutionDir)SetupProject\SetupProject.wixproj" Properties="Configuration=VGR;Platform=x86;OutputPath=bin\VGR" Targets="Build" />
+
+    <MSBuild Projects="$(SolutionDir)ExorLive.Desktop\ExorLive.Desktop.vbproj" Properties="Configuration=Procapita;Platform=Any CPU;OutputPath=bin\Procapita" Targets="Build" />
+    <MSBuild Projects="$(SolutionDir)ExorLive.Client.WebWrapper\ExorLive.Client.WebWrapper.csproj" Properties="Configuration=Procapita;Platform=Any CPU;OutputPath=bin\Procapita" Targets="Build" />
+    <MSBuild Projects="$(SolutionDir)SetupProject\SetupProject.wixproj" Properties="Configuration=Procapita;Platform=x86;OutputPath=bin\Procapita" Targets="Build" />
+  </Target>
+  <!--Target Name="AfterBuild">
     <GetAssemblyIdentity AssemblyFiles="$(SolutionDir)SetupProject\Files\ExorLive.Client.WebWrapper.exe">
       <Output TaskParameter="Assemblies" ItemName="GetVersionAssemblyInfo" />
     </GetAssemblyIdentity>
@@ -158,5 +172,5 @@
     <WriteLinesToFile Condition="'$(Configuration)' == 'Debug'           Or '$(Configuration)' == 'Release'" File="$(ProjectDir)msi\version.txt" Lines="%(GetVersionAssemblyInfo.Version)" Overwrite="true" Encoding="UTF-8" />
     <WriteLinesToFile Condition="'$(Configuration)' == 'Debug.Procapita' Or '$(Configuration)' == 'Procapita'" File="$(ProjectDir)Procapita\msi\version.txt" Lines="%(GetVersionAssemblyInfo.Version)" Overwrite="true" Encoding="UTF-8" />
     <WriteLinesToFile Condition="'$(Configuration)' == 'VGR'" File="$(ProjectDir)msi\VGR\version.txt" Lines="%(GetVersionAssemblyInfo.Version)" Overwrite="true" Encoding="UTF-8" />
-  </Target>
+  </Target-->
 </Project>
