--- a/ExorLive.Client.WebWrapper/App.Debug.config
+++ b/ExorLive.Client.WebWrapper/App.Debug.config
@@ -2,6 +2,9 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 	<applicationSettings>
 		<ExorLive.Properties.Settings>
+			<setting name="AppUrl" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">http://localhost:50000/app/</value>
+			</setting>
 			<setting name="Debug" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">True</value>
 			</setting>
